@@ -103,6 +103,11 @@ show_site_box = no
 # Example: quota_mountpoints = /var/vmail /shares/myfiles
 quota_mountpoints = 
 
+# Show Administrator user in shares ACL user selector
+# Allowed values = [yes|no]
+# Default value = no
+allow_admin_user_in_shares_acl = no
+
 # -- Profile photo management settings (commercial editions only) --
 
 # Name of the share accessible for admin to upload username.jpg files
